增加判断是否拥有plus账户

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,7 @@
                 <th>sess_key</th>
                 <th>org_id</th>
                 <th>account_type</th>
+                <th>is_plus</th>
                 <th>is_gpt4</th>
                 <th>total_granted</th>
                 <th>total_used</th>
