--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <title>查询 OpenAI 账户余额</title>
     <link rel="icon"
-    href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMiAzMiI+PGNpcmNsZSBjeD0iMTYiIGN5PSIxNiIgcj0iMTYiIGZpbGw9IiNGRjQ1MDAiIC8+PC9zdmc+Cg==" />
-
-    <h1 class="text-3xl font-semibold text-center mb-8 text-gradient">查询 OpenAI 账户余额</h1>
-    <p>输入openai账户和密码进行查询，本站不保存账户信息，查询后请自行保存，查询比较慢请耐心等待</p>
-    <p>输入例子: xxx@openai.com----xxx_123</p>
-
+        href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMiAzMiI+PGNpcmNsZSBjeD0iMTYiIGN5PSIxNiIgcj0iMTYiIGZpbGw9IiNGRjQ1MDAiIC8+PC9zdmc+Cg==">
 
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #ffffff; /* 设置背景色为白色 */
+
+        }
+
         .center-container {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-            margin-top: 30px;
+            margin: 30px auto; /* 保持垂直方向上的一些间距，水平方向上自动居中 */
         }
-
+        .info-box {
+            background-color: #f5f5f5;
+            border-radius: 8px;
+            padding: 20px;
+            margin: 10px 0;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+        }
         h1 {
-        font-size: 2.5rem;
-        text-align: center;
+            font-size: 2.5rem;
+            font-weight: 600;
+            text-align: center;
+            margin-bottom: 1.5rem;
+            color: #4caf50;
         }
 
-        footer {
-        padding: 1rem;
-        border-top: 1px solid var(--border-color);
-        text-align: center;
-        opacity: .5;
-        }
-
-        footer i {
-        font-style: normal;
-        color: #ff8787;
+        p {
+            text-align: center;
+            margin-bottom: 1rem;
+            color: #666;
         }
 
         #userData {
-            width: 100%;
+            width: 60%;
             padding: 10px;
             box-sizing: border-box;
-            margin-bottom: 10px;
+            margin-bottom: 1rem;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 14px;
+            color: #333;
         }
 
-        #output {
-            margin-top: 20px;
+        input[type="button"] {
+            background-color: #4caf50;
+            color: white;
+            padding: 8px 16px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type="button"]:hover {
+            background-color: #45a049;
         }
 
         /* Table styles */
@@ -56,12 +77,15 @@
             width: 100%;
             border-collapse: collapse;
             margin: 20px 0;
+            border: 1px solid #ddd;
         }
 
         th,
         td {
+            font-size: 14px;
             border: 1px solid #ddd;
             padding: 8px;
+            text-align: center;
         }
 
         tr:nth-child(even) {
@@ -69,88 +93,111 @@
         }
 
         th {
-            padding-top: 12px;
-            padding-bottom: 12px;
-            text-align: left;
             background-color: #4caf50;
             color: white;
+            font-weight: 600;
+        }
+
+        footer {
+            padding: 1rem;
+            border-top: 1px solid #ddd;
+            text-align: center;
+            opacity: 0.7;
+            color: #888;
         }
     </style>
 </head>
 
-
 <body>
     <div class="center-container">
-        <textarea id="userData" rows="5" cols="50" placeholder="输入openai账号和密码,支持多行输入,格式: email----password"></textarea>
-        <br><br>
-        <input type="button" value="批量查询" onclick="fetchDataAndDisplay()">
-        <br><br>
-        <table id="dataTable">
-            <tr>
-                <th>Username</th>
-                <th>Password</th>
-                <th>is_alive</th>
-                <th>sess_key</th>
-                <th>org_id</th>
-                <th>account_type</th>
-                <th>is_plus</th>
-                <th>is_gpt4</th>
-                <th>total_granted</th>
-                <th>total_used</th>
-                <th>total_available</th>
-                <th>account_expires_at</th>
-            </tr>
-        </table>
+        <div class="info-box">
+            <h1>查询 OpenAI 账户余额</h1>
+            <p>本站不保存账户信息，查询后请自行保存，查询比较慢请耐心等待，不可提交太多账号进行查询</p>
+            <p>输入例子: xxx@openai.com ---- xxx_123</p>
+        </div>
+        <textarea id="userData" rows="5" placeholder="输入openai账号和密码,支持多行输入,格式: email----password"></textarea>
+        <br>
+        <input type="button" value="批量查询" onclick="fetchDataAndDisplay(); showQueryTip()">
+        <br>
+        <div class="table-container">
+            <table id="dataTable">
+                <tr>
+                    <th>Username</th>
+                    <th>Password</th>
+                    <th>is_alive</th>
+                    <th>sess_key</th>
+                    <th>org_id</th>
+                    <th>account_type</th>
+                    <th>is_plus</th>
+                    <th>is_gpt4</th>
+                    <th>total_granted</th>
+                    <th>total_used</th>
+                    <th>total_available</th>
+                    <th>account_expires_at</th>
+                </tr>
+            </table>
+        </div>
     </div>
-<footer>
-    <a href="https://github.com/caoyunzhou/openai-billing">前往 Github 查看源码或独立部署</a>
-    <br> <br>
-    <p id="ipinfo"></p>
-</footer>
 
-<script>
-    function fetchDataAndDisplay() {
-        const userData = document.getElementById('userData').value;
-        const userDataArray = userData.split('\n');
+    <script>
+        function fetchDataAndDisplay() {
+            const userData = document.getElementById('userData').value;
+            const userDataArray = userData.split('\n').filter(line => line.trim() !== '');
+            
+            const batchSize = 1; // Define the batch size
+            let batchIndex = 0;
+            async function fetchAndDisplayBatch() {
+                const batchData = userDataArray.slice(batchIndex, batchIndex + batchSize);
 
-        fetch('/get_sess_key', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ userData: userDataArray })
-        })  // Replace with the actual API endpoint
-            .then(response => response.json())
-            .then(data => {
-                const table = document.getElementById('dataTable');
-                table.innerHTML = ''; // Clear previous data
+                if (batchData.length > 0) {
+                    batchIndex += batchSize;
 
-                // Dynamically add table header based on data keys
-                const headerRow = document.createElement('tr');
-                for (let key in data[0]) {
-                    const th = document.createElement('th');
-                    th.textContent = key;
-                    headerRow.appendChild(th);
-                }
-                table.appendChild(headerRow);
+                    const parsedData = batchData.map(line => {
+                        const [username, password] = line.split('----');
+                        return { username, password };
+                    });
 
-                for (let entry of data) {
-                    const tr = document.createElement('tr');
+                    try {
+                        const response = await fetch('/get_sess_key', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({ userData: parsedData })
+                        });
 
-                    for (let key in entry) {
-                        const td = document.createElement('td');
-                        td.textContent = entry[key];
-                        tr.appendChild(td);
+                        const batchResults = await response.json();
+
+                        // Update the table with the batchResults data
+                        updateTable(batchResults);
+
+                        // Fetch and display the next batch
+                        await fetchAndDisplayBatch();
+                    } catch (error) {
+                        console.error('Error fetching data:', error);
                     }
-
-                    table.appendChild(tr);
                 }
-            })
-            .catch(error => {
-                console.error('Error fetching data:', error);
-            });
-    }
-</script>
+            }
+
+            fetchAndDisplayBatch();
+        }
+
+        function updateTable(data) {
+            const table = document.getElementById('dataTable');
+
+            for (let entry of data) {
+                const tr = document.createElement('tr');
+
+                for (let key in entry) {
+                    const td = document.createElement('td');
+                    td.textContent = entry[key];
+                    tr.appendChild(td);
+                }
+
+                table.appendChild(tr);
+            }
+        }
+    </script>
 
 <script>
     function getIpInfo() {
@@ -168,5 +215,11 @@
 
 </script>
 </body>
+
+<footer>
+    <a href="https://github.com/caoyunzhou/openai-billing">前往 Github 查看源码或独立部署</a>
+    <br> <br>
+    <p id="ipinfo"></p>
+</footer>
 
 </html>
