增加网页地址

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
         <div class="info-box">
             <h1>查询 OpenAI 账户余额</h1>
             <p>本站不保存账户信息，查询后请自行保存，查询比较慢请耐心等待，不可提交太多账号进行查询</p>
-            <p>输入例子: xxx@openai.com ---- xxx_123</p>
+            <p>输入例子: xxx@openai.com----xxx_123 , 查询网页: https://keys.aivvm.com</p>
         </div>
         <textarea id="userData" rows="5" placeholder="输入openai账号和密码,支持多行输入,格式: email----password"></textarea>
         <br>
