修复时间错误,增加预付费类型查询

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,18 +122,19 @@
         <div class="table-container">
             <table id="dataTable">
                 <tr>
-                    <th>Username</th>
-                    <th>Password</th>
-                    <th>is_alive</th>
+                    <th>username</th>
+                    <th>password</th>
+                    <th>alive</th>
                     <th>sess_key</th>
-                    <th>org_id</th>
-                    <th>account_type</th>
-                    <th>is_plus</th>
-                    <th>is_gpt4</th>
-                    <th>total_granted</th>
-                    <th>total_used</th>
-                    <th>total_available</th>
-                    <th>account_expires_at</th>
+                    <th>org</th>
+                    <th>type</th>
+                    <th>plus</th>
+                    <th>gpt4</th>
+                    <th>pay_type</th>
+                    <th>granted</th>
+                    <th>used</th>
+                    <th>available</th>
+                    <th>expires_at</th>
                 </tr>
             </table>
         </div>
